--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -30,6 +30,10 @@
     <SourceRoot Include="$(MSBuildThisFileDirectory)/"/>
   </ItemGroup>
 
+  <PropertyGroup>
+    <MinVerTagPrefix>v</MinVerTagPrefix>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="MinVer" Version="2.1.0" PrivateAssets="All"/>
   </ItemGroup>
